clean up usage of deprecated APIs